# StablecoreGeometry

./: .gitignore  CMakeLists.txt  CMakePresets.json  GenerateGeometryVS2022.bat  README.md  generate_vs_solution.bat  scratch_face_area.cpp
.github/workflows/: ci-autofix-on-failure.yml  ci-windows-cmake.yml
Include/: Geometry.h
Include/Brep/: BrepBody.h  BrepCoedge.h  BrepConversion.h  BrepEdge.h  BrepEditing.h  BrepFace.h  BrepLoop.h  BrepShell.h  BrepVertex.h  Healing.h  MeshConversion.h  MeshOps.h  MeshRepair.h  PolyhedronBody.h  PolyhedronFace3d.h  PolyhedronLoop3d.h  Topology.h
Include/Core/: AxisOps.h  Boolean.h  Editing.h  GeometryApi.h  GeometryTypes.h  GeometryTypesFwd.h  (+12 more)
Source/: SCGeometryPch.h
UnitTests/: CMakeLists.txt
UnitTests/Capabilities/Core/: TestCore.cpp  TestCoreAlgorithms.cpp  TestCoreMultigeometry.cpp  TestSerialize.cpp  TestUmbrella.cpp
UnitTests/Capabilities/Geometry2d/: TestBox.cpp  TestOffset.cpp  TestPointVector.cpp  TestPolygon.cpp  TestPolyline.cpp  TestRelationBoolean.cpp  TestSearchPoly.cpp  TestSegment.cpp  TestShapesPathOps.cpp  TestTopologyIndexing.cpp  TestTransformSampling.cpp
UnitTests/Capabilities/Geometry3d/: Test3dBodyBoolean.cpp  Test3dBrep.cpp  Test3dConversion.cpp  Test3dHealing.cpp  Test3dSection.cpp
UnitTests/Gaps/Geometry2d/: TestBooleanGaps.cpp  TestOffsetGaps.cpp  TestRelationGaps.cpp  TestSearchPolyGaps.cpp
UnitTests/Gaps/Geometry3d/: Test3dBodyBooleanGaps.cpp  Test3dBrepGaps.cpp  Test3dConversionGaps.cpp  Test3dHealingGaps.cpp  Test3dSectionGaps.cpp
UnitTests/Support/: Fixtures3d.h  GeometryTestSupport.h
cmake/: SCGeometryConfig.cmake.in  SCTestHelpers.cmake  stablecore_geometryConfig.cmake.in
docs/: ai-capability-matrix.md  ai-execution-spec.md  ai-iteration-template.md  ai-task-routing.md  api-member-free-function-checklist.md  box-design.md  cloud-ci-handoff.md  coding-style.md  curve3d-surface-design.md  delphi-geometry-parity.md  delphi-interface-fasttrack.md  delphi-test-fasttrack-matrix.md  design-doc-sync-tracker.md  export-design.md  final-naming-plan.md  geometry-3d-first-phase-roadmap.md  geometry-3d-library-design.md  geometry-3d-module-package-layout.md  geometry-3d-section-tessellation-validation-integration.md  geometry-3d-services-design.md  geometry-3d-types-design.md  geometry-3d-validation-healing-design.md  library-design.md  next-task-prompt.md  point-vector-design.md  polygon-design.md  polyhedron-brep-design.md  polyline-design.md  public-api-naming-audit.md  public-api-naming.md  rename-followup-todo.md  sdk-2d-api-convergence.md  sdk-design.md  sdk-type-design-review.md  segment-design.md  session-handoff.md  test-capability-coverage.md  todolist.md  trianglemesh-mesh-conversion-design.md
include/: Geometry.h
scripts/: ci-autofix.ps1
tests/: CMakeLists.txt  test_box.cpp  test_offset.cpp  test_point_vector.cpp  test_polygon.cpp  test_polyline.cpp  test_relation_boolean.cpp  test_sdk.cpp  test_sdk_algorithms.cpp  test_sdk_multigeometry.cpp  test_segment.cpp  test_serialize.cpp  test_shapes_pathops.cpp  test_topology_indexing.cpp  test_transform_sampling.cpp
tests/capabilities/: test_3d_body_boolean_sdk.cpp  test_3d_brep.cpp  test_3d_conversion.cpp  test_3d_healing.cpp  test_3d_section.cpp  test_box.cpp  test_offset.cpp  test_point_vector.cpp  test_polygon.cpp  test_polyline.cpp  test_relation_boolean.cpp  test_sdk.cpp  test_sdk_algorithms.cpp  test_sdk_multigeometry.cpp  test_sdk_umbrella.cpp  test_searchpoly_sdk.cpp  test_segment.cpp  test_serialize.cpp  test_shapes_pathops.cpp  test_topology_indexing.cpp  test_transform_sampling.cpp
tests/gaps/: test_3d_body_boolean_gaps.cpp  test_3d_brep_gaps.cpp  test_3d_conversion_gaps.cpp  test_3d_healing_gaps.cpp  test_3d_section_gaps.cpp  test_boolean_gaps.cpp  test_offset_gaps.cpp  test_relation_gaps.cpp  test_searchpoly_gaps.cpp
tests/support/: Fixtures3d.h  GTestCompat.h  GeometryTestSupport.h
(+393 files in other folders)
