include(GoogleTest)

file(GLOB_RECURSE SCGEOMETRY_CAPABILITY_TEST_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/Capabilities/*.cpp"
)

file(GLOB_RECURSE SCGEOMETRY_GAP_TEST_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/Gaps/*.cpp"
)

list(SORT SCGEOMETRY_CAPABILITY_TEST_SOURCES)
list(SORT SCGEOMETRY_GAP_TEST_SOURCES)

set(SCGEOMETRY_CAPABILITY_TESTS_TARGET SCGeometryCapabilitiesTests)
set(SCGEOMETRY_GAP_TESTS_TARGET SCGeometryGapTests)

add_executable(${SCGEOMETRY_CAPABILITY_TESTS_TARGET} ${SCGEOMETRY_CAPABILITY_TEST_SOURCES})
target_link_libraries(${SCGEOMETRY_CAPABILITY_TESTS_TARGET} PRIVATE ${SCGEOMETRY_TARGET} GTest::gtest GTest::gtest_main)
target_include_directories(${SCGEOMETRY_CAPABILITY_TESTS_TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
SCGeometryConfigureTarget(${SCGEOMETRY_CAPABILITY_TESTS_TARGET})
SCCopyRuntimeDependenciesToTarget(${SCGEOMETRY_CAPABILITY_TESTS_TARGET} ${SCGEOMETRY_TARGET})
gtest_discover_tests(${SCGEOMETRY_CAPABILITY_TESTS_TARGET})

add_executable(${SCGEOMETRY_GAP_TESTS_TARGET} ${SCGEOMETRY_GAP_TEST_SOURCES})
target_link_libraries(${SCGEOMETRY_GAP_TESTS_TARGET} PRIVATE ${SCGEOMETRY_TARGET} GTest::gtest GTest::gtest_main)
target_include_directories(${SCGEOMETRY_GAP_TESTS_TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
SCGeometryConfigureTarget(${SCGEOMETRY_GAP_TESTS_TARGET})
SCCopyRuntimeDependenciesToTarget(${SCGEOMETRY_GAP_TESTS_TARGET} ${SCGEOMETRY_TARGET})
gtest_discover_tests(${SCGEOMETRY_GAP_TESTS_TARGET})
